<resources>
    <string name="app_name">万运通货主</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="updatepsd">修改密码</string>
    <string name="fuwutiaokuan">服务条款</string>
    <string name="banbenjiance">版本检测</string>
    <string name="logout">退出登录</string>
    <string name="setting">设置</string>
    <string name="xingming">姓名</string>
    <string name="suoshugongsi">所属公司</string>
    <string name="dianhua">电话</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="companyname">企业名称</string>
    <string name="companyperson">企业法人</string>
    <string name="companycode">企业执照编号</string>
    <string name="companyinfo">企业信息</string>
    <string name="maketrue_chenge">确认修改</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="please_input_psd_again">请再次输入密码</string>
    <string name="changepsd">修改密码</string>
    <string name="PROMPT_USE_IS_NOT_EMPTY">账号不能为空</string>
    <string name="PROMPT_PSD_IS_NOT_EMPTY">密码不能为空</string>
    <string name="PROMPT_PSD_IS_TOO_SHORT">密码不能少于6位</string>
    <string name="forgetpsd">忘记密码</string>
    <string name="register">注册</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="getauthCode">获取验证码</string>
    <string name="read">请仔细阅读</string>
    <string name="userxieyi">《用户协议》</string>
    <string name="point_is_true">,点击注册既为同意</string>
    <string name="setpsd_again">重新设置密码</string>
    <string name="maketrue">确认</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_idcard">请输入身份证号</string>
    <string name="unbinding">未绑定</string>
    <string name="idcard_pic">身份证照片</string>
    <string name="idcard_pic_zhengmian">身份证正面</string>
    <string name="point_loading">点击\n上传</string>
    <string name="companytongyidaima">企业社会信用代码</string>
    <string name="companyzhizhao">企业执照</string>
    <string name="please_input_companyname">请输入企业名称</string>
    <string name="please_input_companycode">请输入代码</string>
    <string name="bindingtel">绑定手机</string>
    <string name="phonenumber">手机号码</string>
    <string name="addressinfo">地址信息</string>
    <string name="addaddress">新增地址</string>
    <string name="address_edit">地址编辑</string>
    <string name="please_selete">请选择</string>
    <string name="sheng">省</string>
    <string name="qu">区</string>
    <string name="shi">市</string>
    <string name="please_tianxie_address">请填写详细地址</string>
    <string name="please_tianxie_lianxiren">请填写联系人</string>
    <string name="please_tianxie_tel">请填写联系人电话</string>
    <string name="tel">电话</string>
    <string name="linkman">联系人</string>
    <string name="addressdetails">具体地址</string>
    <string name="address">地址\t\t\t\t\t\t</string>
    <string name="tihuodi">提货地\t</string>
    <string name="xiehuodi">卸货地\t</string>
    <string name="zhuangtaigenzong">状态跟踪</string>
    <string name="createtime">创建时间</string>
    <string name="luxian">路线</string>
    <string name="chexingxuqiu">车型需求</string>
    <string name="yujitihuoshijian">预计提货时间</string>
    <string name="xiugai">修改</string>
    <string name="fabu">发布</string>
    <string name="yundangenzong">发布订单</string>
    <string name="xinzengdingdan">新增订单</string>
    <string name="order_release">订单发布</string>
    <string name="order_genzong">订单跟踪</string>
    <string name="goodinfo">货物信息</string>
    <string name="goodsname">货物名称</string>
    <string name="baozhuangleixing">包装类型</string>
    <string name="jianshu">件数</string>
    <string name="jianshu1">件数\t\t(件)</string>
    <string name="weight">重量</string>
    <string name="weight1">重量\t\t(KG)</string>
    <string name="tiji">体积</string>
    <string name="tiji1">体积\t\t(m³)</string>
    <string name="addorder">新增订单</string>
    <string name="yunshuxinxi">运输信息</string>
    <string name="order_bianhao">订单编号</string>
    <string name="qingshurudingdanbianhao">请输入订单编号（默认为整车，非必填）</string>
    <string name="tixiedo">提卸地</string>
    <string name="jiazhi1">价值\t\t(元)</string>
    <string name="jiazhi">价值</string>
    <string name="baocun">保存</string>
    <string name="tianjiahuowuxinxi">添加货物信息</string>
    <string name="my_order">我的订单</string>
    <string name="yundan_state">运单状态</string>
    <string name="yundanbianhao">运单编号</string>
    <string name="phone_fail">手机号不正确</string>
    <string name="PHONE_IS_NOT_EMPTY">手机号不能为空</string>
    <string name="MAKETRUE_PSD_IS_SUCCESS">请确认两次输入密码是否相同！</string>
    <string name="AUTHCODE_IS_NOT_EMPTY">验证码不能为空</string>
    <string name="PHONE_IS_FAIL">手机号不正确</string>
    <string name="NO_BIND_PHONE">没有绑定手机号码</string>
    <string name="PROMPT_FORMAT_FAIL">密码格式不正确</string>
    <string name="next_down">下一步</string>
    <string name="no_bind">未绑定</string>
    <string name="idcard">身份证号码</string>
    <string name="cartype">车型</string>
    <string name="please_input">请输入</string>
    <string name="please_select">请选择</string>
    <string name="please_select_address">请选择地址</string>
    <string name="del_order">删除订单？</string>
    <string name="cancal">取消</string>
    <string name="rel_order">发布订单！</string>
    <string name="xiugaiorder">修改订单</string>
    <string name="no_orderdetails">没有查到该订单</string>
    <string name="has_no_data">没有查到数据！</string>
    <string name="rel_order_success">发布订单成功</string>
    <string name="rel_order_fail">发布订单失败</string>
    <string name="del_order_success">删除订单成功</string>
    <string name="del_order_fail">删除订单失败</string>
    <string name="changepsd_success">修改密码成功</string>
    <string name="changepsd_fail">修改密码失败</string>
    <string name="send_authcode_fail">发送验证码失败</string>
    <string name="send_authcode_to_this_phone">验证码已发送到该手机</string>
    <string name="sys_order_bianhao">系统订单编号</string>
    <string name="weipaiche">未派车</string>
    <string name="del_address">确定删除地址?</string>
    <string name="address_formpt">地址中必须同时有提卸货地</string>
    <string name="address_first_do">第一个地址必须为提货地</string>
    <string name="address_order_is_fail">提卸货地址顺序不正确！</string>
    <string name="photo">相册</string>
    <string name="pai">派</string>
    <string name="dingdanwancheng">订单完成</string>
    <string name="wan">完</string>
    <string name="yujidaodashijian">预计到达时间</string>
</resources>
