<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/goodinfo"
        app:navigationIcon="@drawable/goback_black"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/goodsname"
            android:textColor="@color/black_333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="start"
            android:gravity="center_vertical|right"
            android:hint="@string/goodsname"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black_333"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="15dp"
        android:background="@color/main_gray_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/baozhuangleixing"
            android:textColor="@color/black_333"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="start"
            android:gravity="center_vertical|right"
            android:hint="@string/baozhuangleixing"
            android:singleLine="true"
            android:textColor="@color/black_333"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="15dp"
        android:background="@color/main_gray_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/jianshu1"
            android:textColor="@color/black_333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/tv_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="start"
            android:gravity="center_vertical|right"
            android:hint="@string/jianshu"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/black_333"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="15dp"
        android:background="@color/main_gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/weight1"
            android:textColor="@color/black_333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/tv_weight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="start"
            android:gravity="center_vertical|right"
            android:hint="@string/weight"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/black_333"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="15dp"
        android:background="@color/main_gray_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/tiji1"
            android:textColor="@color/black_333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/tv_tiji"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="start"
            android:gravity="center_vertical|right"
            android:hint="@string/tiji"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/black_333"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="15dp"
        android:background="@color/main_gray_line" />


    <TextView
        android:id="@+id/btn_mk"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/maketrue"
        android:layout_margin="30dp"
        android:textColor="@color/black_333"
        android:background="@drawable/login_btn_bg_shape"/>
</LinearLayout>