<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/addressinfo"
        app:navigationIcon="@drawable/goback_black">
        <TextView
            android:id="@+id/tv_address"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/addaddress"
            android:textColor="@color/black_333"
            android:textSize="12dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"/>
    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/main_gray_line"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/main_gray_line"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:text="提示:您可以长按拖动改变提卸货地顺序"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/recycler_view"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/btn_mk"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/maketrue"
        android:layout_margin="30dp"
        android:textColor="@color/black_333"
        android:background="@drawable/login_btn_bg_shape"/>



</LinearLayout>