<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:text="@string/goodsname"
                android:textColor="@color/black_333"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="start"
                android:text="1"
                android:gravity="center_vertical|right"
                android:singleLine="true"
                android:textColor="@color/black_98"
                android:textSize="14sp" />
        </LinearLayout>
        <View
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|right"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_edit" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_delete" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:text="@string/baozhuangleixing"
                android:textColor="@color/black_333"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="start"
                android:gravity="center_vertical|right"
                android:singleLine="true"
                android:text="1"
                android:textColor="@color/black_98"
                android:textSize="14sp" />
        </LinearLayout>
        <View
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:text="@string/jianshu1"
                android:textColor="@color/black_333"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="start"
                android:gravity="center_vertical|right"
                android:singleLine="true"
                android:text="1"
                android:textColor="@color/black_98"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:text="@string/weight1"
                android:textColor="@color/black_333"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="start"
                android:gravity="center_vertical|right"
                android:singleLine="true"
                android:text="1"
                android:textColor="@color/black_98"
                android:textSize="14sp" />
        </LinearLayout>
        <View
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:text="@string/tiji1"
                android:textColor="@color/black_333"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="start"
                android:gravity="center_vertical|right"
                android:singleLine="true"
                android:text="1"
                android:textColor="@color/black_98"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>